--- a/MoviesFrontend/movies_Client/package.json
+++ b/MoviesFrontend/movies_Client/package.json
@@ -18,6 +18,7 @@
     "movies-client": "file:",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "styled-components": "^6.1.13"
   },
   "devDependencies": {
